added scoring mechanism

--- a/main.html
+++ b/main.html
@@ -19,7 +19,8 @@
 
         <p id="derp"></p>
         <p id="outcome"></p>
-        <p id="score"></p>
+        <p id="player-score"></p>
+        <p id="computer-score"></p>
         <script src="script.js"></script>
       </div>
     </div>
