added player icon

--- a/main.html
+++ b/main.html
@@ -11,16 +11,17 @@
   <body>
     <div class="container">
     <p id ="title">RO SHAM BO MOTHERFUCKER!</p>
-
       <div id="main-derp">
         
 
         <button onclick="roShamBo()">Play</button>
-
         <p id="derp"></p>
         <p id="outcome"></p>
+        Player Score: 
         <p id="player-score"></p>
+        Computer Score: 
         <p id="computer-score"></p>
+        <img id="derp-image" src="" /> 
         <script src="script.js"></script>
       </div>
     </div>
