--- a/main.html
+++ b/main.html
@@ -21,7 +21,8 @@
         <p id="player-score"></p>
         Computer Score: 
         <p id="computer-score"></p>
-        <img id="derp-image" src="" /> 
+        <img id="player-icon" src="" />
+        <img id="computer-icon" src="" /> 
         <script src="script.js"></script>
       </div>
     </div>
