--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
   <body>
 
-  	<div class="jumbotron text-center">
+  	<div class="jumbotron text-center" id="title-text">
   		<h1 id="title">RO SHAM BO!</p>
 	</div>
 
